controller/test/e2e/features/agentgateway/extauth/testdata/ext-authz-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-authz
  namespace: agentgateway-base
  labels:
    app: ext-authz
spec:
  ports:
  - port: 4444
    targetPort: 9000
    protocol: TCP
    appProtocol: kubernetes.io/h2c
  selector:
    app: ext-authz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-authz
  namespace: agentgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-authz
  template:
    metadata:
      labels:
        app: ext-authz
        app.kubernetes.io/name: ext-authz
    spec:
      containers:
      - image: gcr.io/istio-testing/ext-authz:1.25-dev # use istio's extauthz for ease of use
        name: ext-authz
        ports:
        - containerPort: 9000
---
